スタイル追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,9 @@
 				background-color: #F0F0F0;
 			}
 		</style>
+		<!-- nyuw style begin -->
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/nyuw-style.css" />
+		<!-- nyuw style end -->
 		<!-- rouge begin -->
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/styles/rouge-syntax-highlighter.css" />
 		<!-- rouge end -->
