--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,8 @@
 				<span>|</span>
 				<span><a href="{{ site.github.repository_url }}/edit/master/{{ page.path }}">編集</a></span>
 				<span>|</span>
+				<span><a href="{{ site.github.repository_url }}/new/master/">新規作成</a></span>
+				<span>|</span>
 			</div>
 			<hr />
 		</header>
