--- a/assets/styles/nyuw-style.css
+++ b/assets/styles/nyuw-style.css
@@ -53,7 +53,7 @@ a:active {
 strong, b {
 	border-bottom-style: solid;
 	border-bottom-width: 3px;
-	border-bottom-color: #FFFF77;
+	border-bottom-color: #DEFF66;
 }
 em, i {
 	border-bottom-style: solid;
