--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -8,12 +8,24 @@ layout: default
 	<h2>{{ tag[0] }}</h2>
 	{% if page.tags_viewmode=="table" %}
 	<table border="0">
-		<thead><tr><th>題名</th><th>更新日時</th></tr></thead>
+		<thead><tr><th>題名</th><th>更新日時</th><th>投稿者</th><th>別のタグ</th></tr></thead>
 		<tbody>
 			{% for post in tag[1] %}
 			<tr>
 				<td><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></td>
 				<td>{{ post.date | date: "%Y/%m/%d" | default: "取得できません。" }}</td>
+				<td>
+					{% for author in post.authors %}
+					<b>@<a href="https://github.com/{{ author }}">{{ author }}</a></b>
+					<span>|</span>
+					{% endfor %}
+				</td>
+				<td>
+					{% for tag in post.tags %}
+					<b><a href="{{ site.baseurl }}/articles/tags.html#{{ tag }}">{{ tag }}</a></b>
+					<span>|</span>
+					{% endfor %}
+				</td>
 			</tr>
 			{% endfor %}
 		</tbody>
