--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -15,12 +15,14 @@ layout: default
 				<td><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></td>
 				<td>{{ post.date | date: "%Y/%m/%d" | default: "取得できません。" }}</td>
 				<td>
+					<span>|</span>
 					{% for author in post.authors %}
 					<b>@<a href="https://github.com/{{ author }}">{{ author }}</a></b>
 					<span>|</span>
 					{% endfor %}
 				</td>
 				<td>
+					<span>|</span>
 					{% for tag in post.tags %}
 					<b><a href="{{ site.baseurl }}/articles/tags.html#{{ tag }}">{{ tag }}</a></b>
 					<span>|</span>
